 - You can now unbind event handlers from within themselves
 - Documented filter(Function), a very powerful approach for custom filtering
 - Improved docs for FX module, merging method descriptions and marking optional arguments
 - Improved docs for append, prepend, before and after, merging the three pairs into one
 - Improved show/hide animations to show only hidden and hide only visible elements
 - Added attr(String,Function) to calculate the value and support for attr("key", "${formula}") syntax, a shortcut for the former

1.0.4
-----

 - Tons of bug fixes
 - Extensions to $.ajax: $.ajax accepts additonal options: beforeSend, async and processData; returns XMLHttpRequest to allow manual aborting of requests, see docs for details
 - AJAX module: the public $.ajax API is now used internally (for $.get/$.post etc.); loading scripts works now much more reliable on all browers except Safari
 - New global ajax handler: ajaxSend - called before an ajax request is sent
 - Extensions to global ajax handlers: ajaxSend, ajaxSuccess, ajaxError and ajaxComplete get XMLHttpRequest and settings passed as arguments
 - Extensions to event handling: pageX and pageY are available x-browser (IE does not provide native pageX/Y)
 - Improved docs: $(String) method has now two seperate descriptions, one for selecting elements, one for creating (html on-the-fly)
 - FX module: Most inline stlyes added by animations are now removed when the animation is complete, eg. height style when animating height (exception: display styles)
 - Added note to attr(String, Object) about issues with setting the name property on input elements
 - Seperated internal stuff from get() into set()
 - Merged the two API examples for each() into one more precise example
 - Improved docs for $.browser and added docs for $.boxModel
 - Docs for the jQuery constructor $() were improved: There is now $(String expression[, Object context]) and $(String html)